    address the problem (especially in the case of 400 errors).

    The program has been improved to provide more information to the user when
    the repo creation operation fails. It will now dump the HTTP response
    content to the screen beneath the error messages, which is usually a small
    JSON document that provides more hints about what the problem was.


* ads-github-tools 0.3.2 (2020-10-29)

** fixes

   (None)


** improvements

*** issue 59: new tool: ads-github-cache(1)

    "implement cache for '/user/repos', other paths"
    https://github.com/salewski/ads-github-tools/issues/59

**** ads-github-cache: context

     The program was implemented primarily for the internal use by other
     utilities in the ads-github-tools, but may be used directly from the
     command line, as well.

     One major change is that users will want to get in the habit of
     periodically invoking:

     :    $ ads-github-cache -v --update

     either manually or (more likely) from an automated process (such as a
     daily cron job). Having the cache available is the difference between some
     operations being painfully slow or pleasantly snappy on on large
     collections of resources (e.g., GitHub repos).

     Integration of the cache into the various utilities is still at the very
     early stages. Expect to see regular improvements in this area in
     subsequent releases. See ads-github-cache(1) for all the gory details.

     Usage:

     :     ads-github-cache --update
     :
     :     ads-github-cache --update 'https://api.github.com/user/repos'
     :     ads-github-cache --update '/user/repos'
     :
     :     ads-github-cache --clear  '/user/repos'
     :
     :     ads-github-cache --clear-all
     :
     :     ads-github-cache --get        '/user/repos'
     :
     :     ads-github-cache --get-cached '/user/repos'


**** ads-github-cache --help

     :    $ ads-github-cache --help
     :    usage: ads-github-cache { -h | --help }